# glitchtip-backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  .isort.cfg  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  NOTICE.md  README.md  docker-compose.locust.yml  docker-compose.metrics.yml  docker-compose.yml  locustfile.py  manage.py  mypy.ini  pyproject.toml  renovate.json  requirements.txt
.github/: CODEOWNERS  fetch_from_upstream.sh  pull_request_template.md
.github/workflows/: add-reviewer.yml  main.yml
alerts/: admin.py  constants.py  email.py  models.py  serializers.py  tasks.py  tests.py  views.py  webhooks.py
alerts/migrations/: 0001_initial.py  0001_squashed_0007_alter_alertrecipient_id_alter_notification_id_and_more.py  0002_alertrecipient.py  0002_auto_20210314_2022.py  0003_auto_20210327_1648.py  0004_auto_20210411_1913.py  0005_alter_alertrecipient_url.py  0006_projectalert_name_projectalert_uptime.py  0007_alter_alertrecipient_id_alter_notification_id_and_more.py  0008_add_webhook_type.py  0008_alter_alertrecipient_recipient_type.py
alerts/templates/: issue-drip.html  met-quota-drip.html  multiple-issues-drip.html  near-quota-drip.html
alerts/tests/: test_api_permissions.py  test_duplicate_errors.py  test_tasks.py  test_views.py  test_webhooks.py  tests.py
api_tokens/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api_tokens/migrations/: 0001_initial.py  0001_squashed_0005_alter_apitoken_id.py  0002_auto_20200821_1446.py  0003_alter_apitoken_created.py  0004_alter_apitoken_token.py  0005_alter_apitoken_id.py
apps/: common_event_schema.py  cursor_pagination.py  pagination.py
apps/alerts/: admin.py  permissions.py  serializers.py  tasks.py  views.py  webhooks.py
apps/api_tokens/: admin.py  api.py  schema.py  serializers.py  tests.py
apps/difs/: admin.py  models.py  permissions.py  stacktrace_processor.py  tasks.py  tests.py  urls.py  views.py
apps/djstripe_ext/: models.py  serializers.py  tasks.py  urls.py  views.py
apps/environments/: admin.py  models.py  permissions.py  serializers.py  views.py
apps/event_ingest/: api.py  authentication.py  constants.py  embed_api.py  forms.py  javascript_event_processor.py  model_functions.py  process_event.py  schema.py  tasks.py  utils.py
apps/files/: admin.py  assemble.py  exceptions.py  permissions.py  tasks.py  views.py
apps/importer/: importer.py  serializers.py  tests.py  urls.py  views.py
apps/issue_events/: admin.py  api.py  constants.py  models.py  schema.py  tasks.py  utils.py
apps/organizations_ext/: admin.py  email.py  invitation_backend.py  permissions.py  tasks.py  urls.py  utils.py  views.py
apps/performance/: admin.py  filters.py  models.py  views.py
apps/projects/: models.py  permissions.py  urls.py  views.py
apps/releases/: admin.py  models.py  serializers.py  views.py
apps/stats/: serializers.py  urls.py  views.py
apps/teams/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/uptime/: constants.py  email.py  models.py  serializers.py  tasks.py  views.py
apps/user_reports/: models.py  serializers.py  views.py
apps/users/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/wizard/: serializers.py  tests.py  views.py
bitfield/: __init__.py  admin.py  forms.py  models.py  query.py  types.py
comments/: models.py  serializers.py  tests.py  views.py
comments/migrations/: 0001_initial.py
difs/: admin.py  apps.py  models.py  permissions.py  stacktrace_processor.py  tasks.py  tests.py  urls.py  views.py
djstripe_ext/: email.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
environments/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
event_store/: event_context_processors.py  event_tag_processors.py  parsers.py  serializers.py  tests.py  urls.py  views.py
events/: admin.py  event_context_processors.py  event_tag_processors.py  fields.py  models.py  negotiation.py  serializers.py  urls.py  utils.py  views.py
files/: admin.py  assemble.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
glitchtip/: asgi.py  authentication.py  base_commands.py  base_models.py  celery.py  constants.py  debounced_celery_task.py  email.py  exceptions.py  filters.py  model_utils.py  pagination.py  partitioning.py  permissions.py  routers.py  serializers.py  settings.py  social.py  tasks.py  tests.py  urls.py  utils.py  views.py  wsgi.py  yasg.py
issues/: admin.py  baker_recipes.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  test_event.json  test_event_py.json  tests.py  urls.py  views.py
locust/: locustfile.py
observability/: metrics.py  tests.py  urls.py  views.py
organizations_ext/: admin.py  email.py  fields.py  invitation_backend.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
performance/: admin.py  filters.py  models.py  serializers.py  tasks.py  test_data.py  views.py
projects/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
releases/: admin.py  models.py  permissions.py  serializers.py  views.py
sentry/: constants.py  culprit.py
stacktraces/: processing.py
teams/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
templates/: 404.html
test_api/: tests.py  urls.py  views.py
uptime/: admin.py  apps.py  constants.py  email.py  models.py  serializers.py  tasks.py  tests.py  utils.py  views.py
user_reports/: forms.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  forms.py  models.py  serializers.py  test.py  urls.py  utils.py  views.py
utils/: safe.py
(+489 files in other folders)
