[tool.poetry]
name = "glitchtip-backend"
version = "0.1.0"
description = "Django backend that powers GlitchTip, an open source reimplementation of Sentry"
authors = ["David Burke"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~4.1.0"
djangorestframework = "^3.12.1"
django-allauth = "~0.51.0"
django-cors-headers = "^3.2.0"
django-environ = "^0.9.0"
django-extensions = "^3.0.2"
django-organizations = "~2.0.1"
django-storages = {extras = ["boto3", "azure", "google"], version = "^1.12.3"}
drf-nested-routers = "^0.93.3"
uWSGI = "^2.0.18"
whitenoise = "^6.0.0"
sentry-sdk = "^1.0.0"
django-filter = "^22.1"
celery = {version = "~5.2.1", extras = ["redis"]}
django-celery-results = "^2.0.0"
jsonschema = "^3.2.0"
simplejson = "^3.17.0"
django-csp = "^3.6"
dj-stripe = "2.7.0a7"
django-anymail = "^8.1"
drf-yasg = "^1.17.1"
dj-rest-auth = "~2.2.1"
user-agents = "^2.1"
django-ipware = "^4.0.0"
anonymizeip = "^1.0.0"
symbolic = "^9.0.0"
django-rest-mfa = "^1.0.0"
aiohttp = "^3.7.4"
google-cloud-logging = "^3.0.0"
django-bitfield = "^2.2.0"
django-prometheus = "^2.2.0"
django-sql-utils = "^0.6.1"
django-redis = {extras = ["hiredis"], version = "^5.2.0"}
hiredis = "^2.0.0"
psycopg2 = "^2.9.3"
uwsgi-chunked = "^0.1.8"
django-import-export = "^2.8.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
ipdb = "^0.13.2"
pylint = "^2.4.4"
pylint-django = "^2.0.13"
locust = "^2.10.1"
freezegun = "^1.1.0"
rope = "^1.3.0"
model_bakery = "^1.1.1"
tblib = "^1.7.0"
mypy = "^0.971"
django-debug-toolbar = "^3.2"
django-stubs = "^1.9.0"
django-sslserver = "^0.22"
aioresponses = "^0.7.2"
isort = "^5.9.3"
requests-mock = "^1.9.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
